syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetCustomers (CustomersLookupModel) returns (stream CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomersLookupModel {
	
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddess = 3;
	bool isActive = 4;
}